# LSPL-3

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  build.props  lspl2.sln  lspl2.vcxproj  lspl2.vcxproj.filters  lspl2_ebnf_syntax.txt  lspl2config.json  lspl2config_scheme.json  lspl3.sln  lspl3.vcxproj  lspl3.vcxproj.filters  lspl3_ebnf_syntax.txt  lspl3config.json  rapidjson.props
parser/: parser.sln  parser.vcxproj  parser.vcxproj.filters  syntax.ebnf.txt
parser/Src/: CommonStd.h  Tokenizer.cpp  Tokenizer.h  main.cpp
src/: Attributes.cpp  Attributes.h  Configuration.cpp  Configuration.h  ErrorProcessor.cpp  ErrorProcessor.h  FixedSizeArray.h  Matcher.cpp  OrderedList.h  Parser.cpp  Parser.h  Pattern.cpp  Pattern.h  PatternMatch.cpp  PatternMatch.h  PatternMatcher.cpp  PatternMatcher.h  PatternsFileProcessor.cpp  PatternsFileProcessor.h  SharedFileLine.h  Text.cpp  Text.h  TextLoader.cpp  TextLoader.h  Tokenizer.cpp  Tokenizer.h  Tools.cpp  Tools.h  TranspositionSupport.cpp  TranspositionSupport.h  common.h  main.cpp
tests/: 2001_A_Space_Odyssey.json  Patterns.txt
